=========================================================================
CHANGE LOG
=========================================================================

2011-08-15 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed a conversion bug in util.cbc; thanks Hongbo.
	
2011-07-26 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* one more fread

2011-07-26 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixing bugs introduced by last commit for freads; and fixed another importing bug

2011-07-25 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixing more warnings; opengl bindings work again; thanks to Jack
	Haworth for the patch

2011-07-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed lots of warnings on build; cleaning up code

2011-07-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Multi-model PDBs now write ENDMDL after models and END at end of file; thanks to Thomas Holder for the patch. 

2011-06-23 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Code cleaning; reducing number of warnings

2011-06-22 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Small state bugfix

	* Feedback bugfix

	* Updated TNT to 3.0b

2011-06-16 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* suppress guess valences warning message to Blather

2011-06-09 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed volume shader; esp for Ubuntu

2011-06-08 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* "fix" for colored sticks problem

	* fixed File > Save Molecule using object's state

	* fog/shading in shaders

2011-05-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* bugfix for drawing ribbons, drastically increases their rendering (3x+)

2011-05-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed a bug where group names were clipped

2011-05-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed state bug in distances for (all)

	* fixed ray trace bug when not using Python
